discussion/kv_engine/179220/179220_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52676: Track the MFU value of all evictable items

Eviction seeks to identify "cold" items to evict - items which have
been used least/least recently, as determined by its Most Frequently
Used counter.

Previously, the distribution of MFU values was learned progressively as
eviction ran.

However, future work may change from evicting some percentage of the
items in _each_ vbucket, to evicting some percentage of all items -
even if that leads to uneven vbuckets.

This would better keep the hottest items in the whole bucket resident
e.g., a very cold vbucket may have everything evicted, rather than
having the same percentage resident as a much hotter vbucket.

To support this, it is required that a distribution of MFUs across the
entire bucket could be approximated. Learning this incrementally would
be heavily influenced by the order vbuckets are visited in, and may be
quite inaccurate until paging has visited every vb (at which point it
is too late).

As as step towards this goal, this patch tracks the MFU of all
evictable items in a vbucket "up front"; any action which may change
the evictability of an item, or its MFU, now updates a histogram.

Change-Id: I56c1a86b9ca9cfd927692f90b4b8f4acc56586b9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-08-25 11:57:49.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-25 12:09:34.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19714/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:53:24: error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
    static_assert(std::numeric_limits<Value>::is_integer,
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:53:39: error: "Value" does not refer to a value [clang-diagnostic-error]
    static_assert(std::numeric_limits<Value>::is_integer,
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:43:17: note: declared here
template <class Value = uint8_t,
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:53:47: error: no member named "is_integer" in the global namespace [clang-diagnostic-error]
    static_assert(std::numeric_limits<Value>::is_integer,
                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:57:25: error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
    static_assert(!std::numeric_limits<Value>::is_signed,
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:57:40: error: "Value" does not refer to a value [clang-diagnostic-error]
    static_assert(!std::numeric_limits<Value>::is_signed,
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:43:17: note: declared here
template <class Value = uint8_t,
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:57:48: error: no member named "is_signed" in the global namespace [clang-diagnostic-error]
    static_assert(!std::numeric_limits<Value>::is_signed,
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:118:33: error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
    std::array<StoredType, std::numeric_limits<Value>::max()> valueArray = {0};
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:118:48: error: "Value" does not refer to a value [clang-diagnostic-error]
    std::array<StoredType, std::numeric_limits<Value>::max()> valueArray = {0};
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:43:17: note: declared here
template <class Value = uint8_t,
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:118:56: error: non-friend class member "max" cannot have a qualified name [clang-diagnostic-error]
    std::array<StoredType, std::numeric_limits<Value>::max()> valueArray = {0};
                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:118:61: error: expected ";" at end of declaration list [clang-diagnostic-error]
    std::array<StoredType, std::numeric_limits<Value>::max()> valueArray = {0};
                                                            ^
                                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19714/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/array_histogram.h:53:24:
error: no member named "numeric_limits" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19714/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48633/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/benchmarks/hash_table_bench.cc(349): error C2660: "HashTable::Statistics::prologue": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48633/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40879/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/array_histogram.h:53:24:
error: no member named "numeric_limits" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40879/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20938/ : FAILURE

Compile error at [2022-08-25T12:01:21.253Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/benchmarks/hash_table_bench.cc:349:49:
error: too few arguments to function call, expected 2, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20938/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9506/ : FAILURE

Compile error at [2022-08-25T12:02:54.468Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@3/kv_engine/engines/ep/benchmarks/hash_table_bench.cc:349:49:
error: no matching function for call to ?HashTable::Statistics::prologue(std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9506/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9407/ : FAILURE

Compile error at [2022-08-25T12:00:18.797Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/benchmarks/hash_table_bench.cc:349:49:
error: too few arguments to function call, expected 2, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9407/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21658/ : FAILURE

Compile error at [2022-08-25T12:02:21.851Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/benchmarks/hash_table_bench.cc:349:49:
error: no matching function for call to ?HashTable::Statistics::prologue(std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21658/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22744/ : FAILURE

Compile error at [2022-08-25T12:05:20.291Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/benchmarks/hash_table_bench.cc:349:49:
error: too few arguments to function call, expected 2, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22744/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22013/ : FAILURE

Compile error at [2022-08-25T12:04:31.867Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/array_histogram.h:118:63:
error: missing braces around initializer for ?std::__array_traits<std::atomic<long unsigned int>, 255>::_Type? {aka ?std::atomic<long unsigned int> [255]?} [-Werror=missing-braces]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22013/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30040/ : FAILURE

Compile error at [2022-08-25T12:06:12.563Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/benchmarks/hash_table_bench.cc:349:49:
error: too few arguments to function call, expected 2, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30040/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18935/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
